fix for bug 19559.  fix the test plugin on linux.  r=pavlov